# vktriangle

./: .gitignore  CMakeLists.txt  README.md  main.c
graphics/: CMakeLists.txt  fs.h  shaders.hlsl  vs.h  vulkan.c
include/: graphics.h  mem.h  platform.h
platform/: CMakeLists.txt  win32.c  xlib.c
